# NLP-Assignments

./: assignment1.ipynb  assignment2.ipynb  assignment3.ipynb  assignment4.ipynb  assignment5.ipynb  main.py  pyproject.toml
