[project]
name = "assignments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=0.26.0",
    "datasets==3.6.0",
    "evaluate>=0.4.6",
    "gensim>=4.3.2",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "nltk>=3.9.1",
    "numpy>=2.3.2",
    "rouge-score>=0.1.2",
    "scikit-learn>=1.7.1",
    "torch>=2.8.0",
    "transformers[torch]>=4.57.1",
    "trl>=0.25.1",
]
